feat: enterprise CRM, AI platform, BI platform, finance, customer, lead and vendor services